--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
-Flask~=3.1.2
-Flask-CORS
-gunicorn
-kaggle
-pillow
+# Core Django
 django~=5.2.7
 djangorestframework~=3.16.1
-django-filter~=25.2
+
+# PostgreSQL database adapter
+psycopg2-binary~=2.9.9
+
+# Authentication
+djangorestframework-simplejwt~=5.3.0
+
+# CORS for frontend communication
+django-cors-headers~=4.3.0
+
+# Environment variables
+python-decouple~=3.8
+
+# For production deployment
+gunicorn
+
+# use later for google oauth
+# django-allauth~=0.57.0
